# obscene_detector

./: .gitignore  LICENSE  README.md  detector.conf  pyproject.toml  requirements.txt
app/: __main__.py  conf_manager.py  main_window.py  word_manager.py  worker.py
app/locale/en/LC_MESSAGES/: messages.po
app/locale/ru/LC_MESSAGES/: messages.po
